# PS3-Game-Update-Downloader

./: Cargo.toml
src/: downloader.rs  main.rs
src/downloader/: ui.rs
